dev: Create more real interface and instance it

--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "comfy-hotreload"
+name = "hotreload-host"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-game = { path = "../game" }
-
 anyhow = "1.0.86"
 wasmtime = { version = "21.0.1", features = ["component-model"] }
 wasmtime-wasi = "21.0.1"
