feat: Start integrating a game UI

--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 anyhow = "1.0.86"
 wasmtime = { version = "21.0.1", features = ["component-model"] }
 wasmtime-wasi = "21.0.1"
+macroquad = "0.4"
