--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+bincode = "1.3.3"
+serde = { version = "1.0", features = ["derive"] }
 wit-bindgen = "0.26.0"
