--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["game", "hotreload-host", "launcher", "render"]
+members = ["game", "hotreload-host", "launcher", "frontend"]
 resolver = "2"
