feat: Complete stand alone launcher

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
         "cabi",
         "debouncer",
         "dylib",
+        "Kreon",
+        "macroquad",
+        "reloadable",
         "rustacean",
         "undefines",
         "wasi",
