--- a/launcher/Cargo.toml
+++ b/launcher/Cargo.toml
@@ -17,7 +17,7 @@ notify-debouncer-full = { version = "0.3.1", optional = true }
 notify = { version = "6.1.1", optional = true }
 
 [features]
-default = ["hotreload"]
+default = ["direct"]
 hotreload = [
     "dep:wasmtime",
     "dep:wasmtime-wasi",
