--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-trait = "0.1.83"
 bincode = "1.3.3"
 serde = { version = "1.0", features = ["derive"] }
 wit-bindgen = "0.36.0"
