Fix non-hotreload being broken

--- a/launcher/Cargo.toml
+++ b/launcher/Cargo.toml
@@ -19,7 +19,7 @@ async-trait = "0.1.83"
 async-mutex = "1.4.0"
 
 [features]
-default = ["hotreload"]
+default = ["direct"]
 hotreload = [
     "dep:wasmtime",
     "dep:wasmtime-wasi",
